# Supervised-Semantic-Differential

./: .gitignore  README.md  pyproject.toml
ssd/: __init__.py  clusters.py  core.py  lexicon.py  preprocess.py  snippets.py  utils.py
ssdiff/: __init__.py  clusters.py  core.py  lexicon.py  preprocess.py  snippets.py  utils.py
tests/: test_basic_pipeline.py  test_imports.py
