[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssd"
version = "0.1.0"
description = "Supervised Semantic Differential (SSD): interpretable, embedding-based analysis of concept meaning in text."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Hubert Plisiecki", email = "hplisiecki@gmail.com" }
]

keywords = ["NLP", "semantics", "word embeddings", "psychometrics", "semantic differential", "computational social science"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing :: Linguistic",
]

# Runtime dependencies (non-optional)
dependencies = [
  "numpy>=1.26.4",
  "pandas>=2.1.4",
  "scikit-learn>=1.3.2",
  "gensim>=4.3.2",
  "spacy>=3.7.2",
]

[project.urls]
Homepage = "https://github.com/hplisiecki/Supervised-Semantic-Differential"
Repository = "https://github.com/hplisiecki/Supervised-Semantic-Differential"
Issues = "https://github.com/hplisiecki/Supervised-Semantic-Differential/issues"
Changelog = "https://github.com/hplisiecki/Supervised-Semantic-Differential/releases"

[project.optional-dependencies]
# Optional feature sets. Install via: pip install "ssd-semdiff[dev,gui]"
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.5",
  "mypy>=1.6",
  "build>=1.0.0",
  "twine>=4.0",
]
gui = [
  "PySide6>=6.6"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ssd*"]
exclude = ["tests*","examples*","docs*"]

[tool.setuptools.package-data]
"ssd" = ["py.typed", "py.typed", "resources/*"]
